# homework-on-mathematical-functions

./: README.md  pyproject.toml
src/homework2/: classify_function.py  mypy_score_keeper_tutorial.md  score_keeper.py
tests/: test_classify_function.py  test_classify_function_typechecks.py  test_classify_function_typechecks_extended.py  test_score_keeper.py
